Fix z-index issue
loading-screen, minimized-nav, maximized-nav

--- a/src/components/loading-screen/loading-screen-component.scss
+++ b/src/components/loading-screen/loading-screen-component.scss
@@ -17,6 +17,7 @@ $size: 90%;
   opacity: 1;
   animation: fade-away-animation 1.1s linear;
   animation-delay: 2s;
+  z-index: 99999;
 }
 
 .loading-ring-container {
