--- a/src/components/nav/maximized-nav/maximized-nav-component.scss
+++ b/src/components/nav/maximized-nav/maximized-nav-component.scss
@@ -9,6 +9,8 @@
   overflow-y: auto;
   overflow-x: hidden;
 
+  z-index: 99998;
+
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
 
