--- a/src/components/nav/minimized-nav/minimized-nav-component.scss
+++ b/src/components/nav/minimized-nav/minimized-nav-component.scss
@@ -11,6 +11,8 @@ $fix_icon_position: translateX(math.div(-$icon_size, 4));
   font-size: 1.5rem;
   cursor: pointer;
 
+  z-index: 99998;
+
   display: flex;
   align-items: center;
   justify-content: center;
